--- a/hw1/support_files/q3.tex
+++ b/hw1/support_files/q3.tex
@@ -76,9 +76,122 @@
 \begin{document}
 \maketitle
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{Question 1}
+\section{Question 3}
+Let 
+    \[
+        A = 
+        \begin{bmatrix}
+            2 & -1 & 1 \\
+            -2 & 1 & 3 \\
+            4 & 0 & -1 \\
+        \end{bmatrix}
+    \]
 
-\subsection{Subquestion i} \label{sec:1}
+\subsection{Subquestion i} 
+Show that the 2 x 2 leading principal minor of A is 0, i.e., show that
+    \[
+        det \begin{bmatrix}
+            2 & -1 \\
+            -2 & -1 \\
+        \end{bmatrix}  = 0
+    \]
+
+\textbf{Solution} : The determinant of the second leading principal minor is:
+    \[
+        det \begin{bmatrix}
+            2 & -1 \\
+            -2 & -1 \\
+        \end{bmatrix}  = 2(1) - (-2)(-1) = 0
+    \]
+
+\subsection{Subquestion ii} 
+Attempt to do the LU decomposition and show division by U(2,2) cannot be done.
+
+\textbf{Solution}: We apply the LU decomposition and find 
+    \[
+        U(1,1) = A(1,1) = 2 \\
+        U(1,2) = A(1,2) = -1 \\
+        U(1,3) = A(1,3) = 1 \\
+    \]
+We calculate the first column of L as:
+    \[
+        L(k,1) = \frac{A(k,1)}{U(1,1)}, \forall k = 1:n \\ 
+    \]
+
+Then,
+    \[
+        L(1,1) = \frac{2}{2} = 1, L(2,1) = \frac{-2}{2} = -1, L(3,1) = \frac{4}{2}
+    \]
+The current LU decomposition is:
+    \[
+        L = 
+        \begin{bmatrix}
+            1 & 0 & 0 \\
+            -1 & 1 & 0 \\
+            2 & L(2,2) & 1 \\
+        \end{bmatrix} ,
+        U = 
+            \begin{bmatrix}
+                2 & -1 & 1 \\
+                0 & U(2,2) & U(2,3) \\
+                0 & 0 & U(3,3) \\
+            \end{bmatrix}
+    \]
+We then update the matrix A by taking out the first column and row of A, L and U. We are left with:
+    \[
+    \begin{aligned}
+        UpdatedA 
+        &= 
+            \begin{bmatrix}
+                1 & 3 \\
+                0 & -1 \\
+            \end{bmatrix} - 
+            \begin{bmatrix}
+                -1  \\
+                2  \\
+            \end{bmatrix}
+            \begin{bmatrix}
+                -1 & 1 \\
+            \end{bmatrix} \\ 
+        &= 
+            \begin{bmatrix}
+                1 & 3 \\
+                0 & -1 \\
+            \end{bmatrix} - 
+            \begin{bmatrix}
+                1 & 1 \\
+                -2 & 2 \\
+            \end{bmatrix} \\
+        &= 
+            \begin{bmatrix}
+                0 & 2 \\
+                2 & -3 \\
+            \end{bmatrix} 
+    \end{aligned}
+    \]
+
+We then write:
+    \[
+        \begin{bmatrix}
+            1 & 0 \\
+            L(3,2) & 1 \\
+        \end{bmatrix}
+        \begin{bmatrix}
+            U(2,2) & U(2,3) \\
+            0 & U(3,3) \\
+        \end{bmatrix} =
+        \begin{bmatrix}
+            0 & 2 \\
+            2 & -3 \\
+        \end{bmatrix}
+    \]
+Now,
+    \[
+        U(2,2) = 0, L(3,2) = \frac{A(3,2)}{U(2,2)}
+    \]
+which causes the LU decomposition to breakdown with division by zero.
+
+
 
 Let $L_1$ and $L_2$ be nonsingular lower triangular matrices and let $U_1$ and $U_2$ be nonsingular upper triangular matrices. If $L_1U_1 = L_2U_2$, show that there exists a nonsingular diagonal matrix D such that 
 \begin{equation} \label{eq:1}
