Move my name from the beginning to the end

--- a/hw2/hw2.tex
+++ b/hw2/hw2.tex
@@ -3,7 +3,7 @@
 
 % HW information
 \title{MTH 9821 Numerical Methods for Finance -- Homework 2}
-\author{Wenli Dong, Bledar Kulemani, Avinash Oza, Bingcheng Wang, Xinlu Xiao}
+\author{Bledar Kulemani, Avinash Oza, Bingcheng Wang, Xinlu Xiao, Wenli Dong}
 \date{\today}
 \makeatletter
 \let\newtitle\@title
