--- a/hw2/hw2.tex
+++ b/hw2/hw2.tex
@@ -120,8 +120,166 @@ backgroundcolor=\color{lbcolor},
 \begin{document}
 \maketitle
 
+\section{Problem 1 (by Avinash Oza)}
+Nothing required to be turned in.
+
+%%%%XINLU's problems%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\section{Problem 6.3 (by Xinlu Xiao)}
+
+(i)\[
+A = \left(
+\begin{matrix}
+1 & -0.2 & 0.8\\
+-0.2 & 2 & 0.3\\
+0.8 & 0.3 & 1.1
+\end{matrix}\right)
+\]
+ $R_{1} = \sum_{k = 2:3} |A(1,k)|$,  so $R_{1} = 0.2 + 0.8 = 1$, and $|A(1,1)| = 1$, we know that $|A(1,1)| = R_{1}$.\\
+$R_{2} = \sum_{k = 1, 3} |A(2,k)|$,  so $R_{2} = 0.2 + 0.3 = 0.5$, and $|A(2,2)| = 2$, we know that $|A(2,2)| > R_{2}$.\\
+$R_{3} = \sum_{k = 1, 2} |A(3,k)|$,  so $R_{3} = 0.8 + 0.3 = 1.1$, and $|A(3,3)| = 1.1$, we know that $|A(3,3)| = R_{3}$.\\
+So by the definition of weakly diagonal dominant matrix, we have $|A(j,j)| \geq R_{j}, \forall j = 1:3$, so matrix $A$ is weakly diagonal dominant matrix.\\
+And from the Gershgorin's Theroem, we know that $|A(j,j)-\lambda| \leq R_{j}$, so we can get:
+\[
+A(j,j) - \lambda \leq |A(j,j)-\lambda| \leq R_{j} \]
+and therefore,
+\[
+\lambda \geq A(j,j) - R_{j}\]
+And since $A$ is a weakly diagonal dominant matrix, so that $A(j,j) \geq R_{j}$, then we can conclude that $\lambda \geq 0$ for any eigenvalue $\lambda$ of A, and therefore that the matrix A is symmetric positive definite.\\
+\\
+(ii) We can calculate all the leading minors of the matrix $A$:
+\[
+det\left(
+\begin{matrix}
+1
+\end{matrix}\right) = 1 > 0
+\]
+\[
+det\left(
+\begin{matrix}
+1 & -0.2\\
+-0.2 & 2
+\end{matrix}\right) = 1.96>0 \]
+\[
+det\left(
+\begin{matrix}
+1 & -0.2 & 0.8\\
+-0.2 & 2 & 0.3\\
+0.8 & 0.3 & 1.1
+\end{matrix}\right) = 0.69 > 0\]
+So that all the leading principal minors are positive, according to Sylvester's Criterion, we know that the matrix $A$ is symmetric positive definite.\\
+
+\section{Problem 6.6 (by Xinlu Xiao)}
+\[
+B_{N} = \left(
+\begin{matrix}
+2 & -1 & \dots & 0 \\
+-1 & \ddots & \ddots & \vdots\\
+\vdots & \ddots & \ddots & -1\\
+0 & \dots & -1 & 2
+\end{matrix} \right) = U_{N}^{t}U_{N}\]
+\[= 
+\left(
+\begin{matrix}
+U_{N}(1,1) & 0 & 0 & \dots & 0\\
+U_{N}(1,2) & U_{N}(2,2) & \dots & \dots & 0\\
+\vdots & \ddots & \ddots & \ddots & \vdots\\
+U_{N}(1,N) & \dots & \dots & \dots & U_{N}(N,N)
+\end{matrix} \right) 
+\left(
+\begin{matrix}
+U_{N}(1,1) & U_{N}(1,2) & \dots & \dots & U_{N}(1,N)\\
+0 & U_{N}(2,2) & \dots & \dots & U_{N}(2,N)\\
+\vdots & \ddots & \ddots & \ddots & \vdots\\
+0 & \dots & \dots & \dots & U_{N}(N,N)
+\end{matrix}\right)
+\]
+From the multiplication of the matrix, we know that 
+\[
+U_{N}(1,1)^2 = B_{N}(1,1), \quad so \quad U_{N}(1,1) = \sqrt{2}\]
+\[
+U_{N}(1,1)U_{N}(1,1:N) = B_{N}(1,1:N)\]
+And since $B_{N}$ is a triangular symmetric positive definite matrix, we know that $B_{N}(1,3:N) = \emph{\textbf{0}}$, and since $U_{N}(1,1) \neq 0$, so that $U_{N}(1,3:N) = \emph{\textbf{0}}$.\\
+And 
+\[
+U_{N}(1,1)U_{N}(1,2) = B_{N}(1,2), so \quad U_{N}(1,2) = \frac{B_{N}(1,2)}{U_{N}(1,1)} = -\frac{1}{\sqrt{2}}\]
+then we update the matrix $B_{N}$
+\[
+B_{N}(2:N,2:N) = B_{N}(2:N,2:N)-(U_{N}(1,2:N))^{t}U(1,2:N) \]
+\[
+=
+\left(
+\begin{matrix}
+2 & -1 & \dots & 0 \\
+-1 & \ddots & \ddots & \vdots\\
+\vdots & \ddots & \ddots & -1\\
+0 & \dots & -1 & 2
+\end{matrix} \right) - 
+\left(
+\begin{matrix}
+-\frac{1}{\sqrt{2}}\\
+0\\
+\dots\\
+0
+\end{matrix} \right)
+\left(
+\begin{matrix}
+ -\frac{1}{\sqrt{2}}&0&\dots&0
+\end{matrix}\right)=
+\left(
+\begin{matrix}
+\frac{3}{2} & -1 & \dots & 0 \\
+-1 & \ddots & \ddots & \vdots\\
+\vdots & \ddots & \ddots & -1\\
+0 & \dots & -1 & 2
+\end{matrix} \right)\]
+And similarly, we can get the
+\[
+U_{N}(2,2) = \sqrt{\frac{3}{2}}, and \quad U_{N}(2,3) = \frac{B_{N}(2,3)}{U_{N}(2,2)} = -\frac{1}{\sqrt{\frac{3}{2}}} = -\sqrt{\frac{2}{3}},\quad and \quad U_{N}(2,4:N) =\emph{\textbf{0}} \]
+And we can use the induction, assume that $U_{N}(i,i) = \sqrt{\frac{i+1}{i}}, \forall i=1:N$ and $U_{N}(i,i+1) = -\sqrt{\frac{i}{i+1}}, \forall i=1:N-1$ 
+\[
+B_{N}((i+1):N,(i+1):N) = B_{N}((i+1):N,(i+1):N)-(U_{N}(i,(i+1):N))^{t}U(i,(i+1):N) \]
+\[
+=
+\left(
+\begin{matrix}
+2 & -1 & \dots & 0 \\
+-1 & \ddots & \ddots & \vdots\\
+\vdots & \ddots & \ddots & -1\\
+0 & \dots & -1 & 2
+\end{matrix} \right) - 
+\left(
+\begin{matrix}
+-\sqrt{\frac{i}{i+1}}\\
+0\\
+\dots\\
+0
+\end{matrix} \right)
+\left(
+\begin{matrix}
+ -\sqrt{\frac{i}{i+1}}&0&\dots&0
+\end{matrix}\right)=
+\left(
+\begin{matrix}
+\frac{i+2}{i+1} & -1 & \dots & 0 \\
+-1 & \ddots & \ddots & \vdots\\
+\vdots & \ddots & \ddots & -1\\
+0 & \dots & -1 & 2
+\end{matrix} \right)\]
+So that we can get 
+\[
+U_{N}(i+1,i+1) = \sqrt{\frac{i+2}{i+1}}\]
+\[
+U_{N}(i+1,i+2) = \frac{B_{N}(i+1,i+2)}{U_{N}(i+1,i+1)} = -\sqrt{\frac{i+1}{i+2}}\]
+So the induction has been proved. \\
+Thus
+\[
+U_{N}(i,i) = \sqrt{\frac{i+1}{i}}, \forall i=1:N\]
+\[
+U_{N}(i,i+1) = -\sqrt{\frac{i}{i+1}}, \forall i=1:N-1\]\\
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
 %%%%%%%%%%%%%%%%%%%%%%%%55Bledar's problems%%%%%%%%%%%%%%%%%%%
-\section{Problem 6.7} 
+\section{Problem 6.7 (by Bledar Kulemani)} 
 Let \(B_N\) be the N x N  tridiagonal symmetric positive matrix be given by (1). 
 
 % Creating the matrix Bn
@@ -197,7 +355,7 @@ The loop that runs from N-1:1 has:\\
 Additionally, there are 2 operations needed to calculate \(y(1)\) and 5 operations to calculate \(x(N)\). Therefore, the total no. of ops. is \(18(N-1) + 7 = 18n +O(1)\).\\
 
 \newpage{}
-\section {Problem 6.8} 
+\section {Problem 6.8 (by Bledar Kulemani)} 
 \par Let \(B_N\) be the \(NxN\) tridiagonal symmetric positive definite matrix given in problem 7. Show that the L and U factors of the matrix  \(B_N\) are the lower triangular bidiagonal matrix and the upper triangular bidiagonal matrix given by:\\
 \indent \(L(i,i) = 1\) for every \(i=1:N\) and \(L(i+1,i) = -\frac{i}{i+1}\) for every \(i=1:(N-1)\)\\ 
 \indent\(U(i,i) = \frac{i+1}{i}\) for every \(i=1:N\) and \(U(i,i+1) = -1\) for every \(i=1:(N-1)\)\\\\
@@ -250,7 +408,7 @@ Therefore we have:\\
 Then, by induction, the proof follows. Note that the operation count is \(3n + O(1).\)
 
 \newpage{}
-\section{Problem 6.9}
+\section{Problem 6.9 (by Bledar Kulemani)}
 \par Let \(B_N\) be the \(NxN\) tridiagonal symmetric positive definite matrix given in problem 7, and let L and U be the LU factors of the matrix  \(B_N\) given in problem 8.\\
 \((i)\) Show that the solution to a linear system \(B_N*x=b\) where \(b\) and \(x\) are the \(Nx1\) column vectors can be obtained by using the pseudocode below:\\\\
 			\indent \hspace{5 cm}	Function Call:\\
@@ -291,7 +449,7 @@ Operation count:\\
 The total operation count for this algorithm is: \(8*(N-1) + 3 = 8N - 5 = 8n+O(1)\)
 
 \newpage{}
-\section{Problem 6.10}
+\section{Problem 6.10 (by Bledar Kulemani)}
 
 \par Write an explicit optional pseudocode for solving linear systems corresponding to the same tridiagonal symmetric positive definite matrix. In other words, write a pseudocode for solving p linear systems \(A*x_i = b_i\), for \(i=1:p\) where \(A\) is tridiagonal symmetric positive definite matrix.\\\\
 \underline{\textbf {Solution}} \\
@@ -331,8 +489,79 @@ Now we calculate the operation count:\\
 Therefore, the total number of the ops is: \(p*(3n-2+2n-2)+3n-3\) = \(5*n*p +3*n -4*p -3\)\\
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\section{Problem 7.19 (by Xinlu Xiao)}
+Covariance matrix is symmetric positive semidefinite matrix, and we can calculate all the leading principal minors of the matrix, we can get
+\[
+det\left(
+\begin{matrix}
+1
+\end{matrix}\right) = 1 >0\]
+\[
+det\left(
+\begin{matrix}
+1 & 1\\
+1 & 4
+\end{matrix}\right) = 3>0\]
+\[
+det\left(
+\begin{matrix}
+1 & 1 & 0.5\\
+1 & 4 & -2\\
+0.5 & -2 & 9
+\end{matrix}\right) = 20>0\]
+So the covariance matrix is symmetric positive definite matrix, it has Cholesky decompositon, we can get
+\[
+U = \left(
+\begin{matrix}
+1 & 1 & 0.5\\
+0 & 1.7321 & -1.4434\\
+0 & 0 & 2.5820
+\end{matrix}\right)\]
+\[ 
+U^{t} = \left(
+\begin{matrix}
+1 & 0 & 0\\
+1 & 1.7321 & 0\\
+0.5 & -1.4434 & 2.5820
+\end{matrix}\right)
+\]
+So that the three normal random variables given by
+\[
+\left(
+\begin{matrix}
+X_{1}\\
+X_{2}\\
+X_{3}
+\end{matrix}\right) = U^{t}
+\left(
+\begin{matrix}
+Z_{1}\\
+Z_{2}\\
+Z_{3}
+\end{matrix}\right) = 
+\left(
+\begin{matrix}
+1 & 0 & 0\\
+1 & 1.7321 & 0\\
+0.5 & -1.4434 & 2.5820
+\end{matrix}\right)
+\left(
+\begin{matrix}
+Z_{1}\\
+Z_{2}\\
+Z_{3}
+\end{matrix}\right) = 
+\left(
+\begin{matrix}
+Z_{1} \\
+Z_{1}+ 1.7321 Z_{2}\\
+0.5Z_{1} -1.4434 Z_{2} + 2.582 Z_{3}
+\end{matrix}\right) \]
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
 \newpage
-\section{Ch 8 \#3}
+\section{Problem 8.3 (by Bingcheng Wang)}
 \subsection{Subquestion i}
 
 The mid prices of the options are shown in Table \ref{tab:midPrice}.
@@ -437,7 +666,7 @@ Let $C_{BS}$ and $P_{BS}$ be the mid prices of the call and put options. We can 
     \end{table}
 
 From Table \ref{tab:impVol} we can see that under the same strike price, the implied volatilities of calls and puts are very close.
-\section{Ch 8 \#7}
+\section{Problem 8.7 (by Bingcheng Wang)}
 \subsection{Subquestion i}
 
 By using OLS regression, we get
@@ -471,7 +700,7 @@ Thus the approximation error
 \subsection{Subquestion iv}
 The OLS regression has the least approximation error, and the linear interpolation has the approximation error. That is because OLS estimator is BLUE. It has very little residual, while linear interpolation is very rough.
 
-\section{Ch 8 \#8}
+\section{Problem 8.8 (by Bingcheng Wang) }
 \subsection{Subquestion i}
 
 The weekly percentage returns of these stocks are listed in Table \ref{tab:weekly_ret}.
